avoid screen flickering

--- a/packages-custom/ayapi-ui/styles/panes.less
+++ b/packages-custom/ayapi-ui/styles/panes.less
@@ -10,6 +10,7 @@
 
 atom-pane-container {
   atom-pane {
+    position: static;
     outline: 1px solid @base-border-color;
 
     &.active {
