--- a/styles.less
+++ b/styles.less
@@ -4,11 +4,6 @@ atom-pane.active ayapi-webview {
   outline: 1px solid @background-color-selected;
 }
 
-// avoid screen flickering
-atom-text-editor.is-focused::shadow .cursors .cursor {
-  backface-visibility: hidden;
-}
-
 .ayapi-term {
   line-height: 16px;
   
